# kratos

./: .gitignore  README.md  USAGE.md  pyproject.toml
postman/: Kratos_Admin_API.postman_collection.json
src/kratos/: __init__.py  client.py  exceptions.py
src/kratos/admin/: __init__.py  app.py  auth.py  routes.py  schemas.py
src/kratos/db/: __init__.py  engine.py  session.py  upsert.py
src/kratos/models/: __init__.py  api_key.py  api_log.py  audit_log.py  base.py  user_log.py
src/kratos/validators/: __init__.py  schemas.py
tests/: conftest.py  test_client.py  test_models.py  test_thread_safety.py  test_upsert.py  test_validators.py
