[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kratos"
version = "0.1.0"
description = "Database-backed logging service for HappiDost"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
admin = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "testcontainers[postgres]>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
